[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/StartScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/KdamThmorPro-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 2 )

[node name="StartScene" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -82.5
margin_right = 82.5
margin_bottom = 50.0
custom_fonts/normal_font = SubResource( 5 )
text = "King Racho"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -22.0
margin_right = 90.0
margin_bottom = 54.0

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
margin_right = 180.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="DifficultyButton" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 180.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "Difficulty"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 180.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DifficultyButton" to="." method="_on_DifficultyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
